--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,17 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "NODE_ENV=development npx prisma generate && ts-node scripts/importEventsFromCsv.ts && ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "prisma:studio": "prisma studio",
+    "import:dev-data": "NODE_ENV=development ts-node scripts/importEventsFromCsv.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
@@ -21,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "prisma": "^5.10.2",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   }
