--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "NODE_ENV=development npx prisma generate && ts-node scripts/importEventsFromCsv.ts && ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "NODE_ENV=development prisma generate && prisma migrate dev && ts-node scripts/importEventsFromCsv.ts && ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
