--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,8 @@ services:
       - /app/node_modules
     env_file:
       - ./backend/.env
+    environment:
+      - NODE_ENV=development
     depends_on:
       - db
 
@@ -39,6 +41,7 @@ services:
     environment:
       - NODE_ENV=development
       - BACKEND_URL=http://backend:5000
+      - WATCHPACK_POLLING=true
     depends_on:
       - backend
 
