--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -3,14 +3,13 @@ FROM node:20-alpine AS dev
 WORKDIR /app
 
 COPY package*.json ./
-RUN npm install && \
+RUN apk add curl && \
+    npm install && \
     npm cache clean --force
 
 COPY . .
 
 ENV PATH /app/node_modules/.bin:$PATH
-
-RUN npm run build
 
 EXPOSE 3000
 CMD ["npm", "run", "dev"]
