fixed backend, everything runs in dev

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,8 +24,15 @@ services:
       - ./backend/.env
     environment:
       - NODE_ENV=development
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:5000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
     depends_on:
       - db
+
 
   frontend:
     build:
@@ -43,7 +50,8 @@ services:
       - BACKEND_URL=http://backend:5000
       - WATCHPACK_POLLING=true
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
 
   prisma-studio:
     build:
