--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -3,10 +3,10 @@ FROM node:20-slim AS dev
 
 WORKDIR /app
 
-# Install OpenSSL 1.1 and bash (OpenSSL 1.1 is required by Prisma)
+# Install OpenSSL 1.1, bash, and wget (OpenSSL 1.1 is required by Prisma, wget for health checks)
 RUN echo "deb http://deb.debian.org/debian buster main" >> /etc/apt/sources.list && \
     apt-get update && \
-    apt-get install -y libssl1.1 bash openssl dos2unix && \
+    apt-get install -y libssl1.1 bash openssl dos2unix wget && \
     rm -rf /var/lib/apt/lists/*
 
 # Install dependencies
