--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -3,8 +3,7 @@ FROM node:20-alpine AS dev
 WORKDIR /app
 
 COPY package*.json ./
-RUN apk add curl && \
-    npm install && \
+RUN npm install && \
     npm cache clean --force
 
 COPY . .
