feat: Implement accommodation, transportation, and results pages
Introduces the core user flow for selecting accommodation and transportation, culminating in a trip summary page.

Accommodation Page:
Calculates and uses a recommended date range for initial accommodation search.
Implements an interactive sidebar with a calendar for adjusting trip dates.
Ensures accommodation results refetch dynamically based on selected dates.
Adds a "Skip Accommodation" option.
Transportation Page:
Creates a basic page structure to display trip details.
Adds a "Skip Transportation" option.
Results Page:
Creates a basic page structure to summarize user selections.
Components:
Updates AccommodationCard button to navigate to transportation.
Creates ItinerarySidebar component with react-datepicker integration.
Updates ProgressIndicator to include 'Summary' step.
Dependencies:
Adds react-datepicker and date-fns to frontend dependencies.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "typescript": "^5.3.3",
-    "framer-motion": "^11.2.10"
+    "framer-motion": "^11.2.10",
+    "date-fns": "^3.6.0",
+    "react-datepicker": "^6.9.0"
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.19.6",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "autoprefixer": "^10.4.18",
