--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.10.2",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
