Created a new backend API route file backend/src/routes/recommendedTrips.ts with mock data for recommended trips and endpoints for listing and retrieving a single trip. Integrated the new recommendedTrips router into the backend application in backend/src/index.ts. Added the RecommendedTrip interface to the shared types files backend/src/types/index.ts and frontend/src/types/index.ts. Created a new React component frontend/src/components/RecommendedTripCard.tsx to display individual recommended trips. Updated frontend/src/pages/index.tsx to: Fetch recommended trips from the new API endpoint. Display the first few recommended trips using the RecommendedTripCard component in a responsive grid below the search section. Add a "See All Recommendations" button linking to the full list page. Style the recommended trips section with a slightly different background color. Created the placeholder page frontend/src/pages/recommended-trips.tsx to list all recommended trips. Created the placeholder page frontend/src/pages/recommended-trips/[id].tsx to display details of a single recommended trip. The homepage now features a "Recommended Trips" section, and basic pages for viewing all recommendations and individual recommendation details have been created.

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -6,7 +6,7 @@ WORKDIR /app
 # Install OpenSSL 1.1 and bash (OpenSSL 1.1 is required by Prisma)
 RUN echo "deb http://deb.debian.org/debian buster main" >> /etc/apt/sources.list && \
     apt-get update && \
-    apt-get install -y libssl1.1 bash openssl dos2unix && \
+    apt-get install -y libssl1.1 bash openssl dos2unix curl && \
     rm -rf /var/lib/apt/lists/*
 
 # Install dependencies
