--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,11 @@ services:
       - ./backend/.env
     depends_on:
       - db
+    healthcheck:
+      test: ["CMD-SHELL", "curl --fail http://localhost:5000/api/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   frontend:
     build:
@@ -40,7 +45,8 @@ services:
       - NODE_ENV=development
       - BACKEND_URL=http://backend:5000
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
 
   prisma-studio:
     build:
